--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist/demo",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "browser": "./src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -90,7 +90,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./src/styles.scss"
             ],
             "scripts": []
           }
